ocp/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: prompolicy
spec: {}
status: {}
