ocp/deploy-perses.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: perses
    version: v1
  name: perses
spec:
  progressDeadlineSeconds: 10
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: perses
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: perses
        sidecar.istio.io/inject: 'true'
        version: v1
    spec:
      containers:
        - image: docker.io/persesdev/perses:latest
          imagePullPolicy: IfNotPresent
          name: perses
          ports:
            - containerPort: 8080
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: 10m
              memory: 256Mi
          volumeMounts:
            - mountPath: /perses
              name: perses
            - mountPath: /etc/perses/plugins/
              name: plugins
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 3
      volumes:
        - name: perses
          emptyDir: {}
        - name: plugins
          emptyDir: {}
