ocp/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    app: prom-policy
    version: v1
  name: prom-policy
spec:
  progressDeadlineSeconds: 10
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: prom-policy
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations: {}
      creationTimestamp: null
      labels:
        app: prom-policy
        coo: monitoring-stack
        sidecar.istio.io/inject: 'true'
        version: v1
    spec:
      containers:
        - env:
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  apiVersion: v1
                  fieldPath: metadata.namespace
            - name: MAX_WORKERS
              value: '10'
            - name: CERBOSAPI
              value: grpc://127.0.0.1:3593
            - name: AUTH_HEADER
              value: "x-id-token"
            - name: PROMAPI
              value: https://prometheus-k8s.openshift-monitoring.svc.cluster.local:9091
          image: localhost/prom-authz:v2.0.0
          imagePullPolicy: Always
          name: prom-policy
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: 10m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /config
              name: cerbosconfig
              readOnly: true
            - mountPath: /policies
              name: cerbos
        - args:
            - server
            - --config=/config/config.yaml
          image: ghcr.io/cerbos/cerbos:latest
          imagePullPolicy: IfNotPresent
          name: cerbos
          ports:
            - containerPort: 3593
              protocol: TCP
          resources:
            limits:
              cpu: '1'
              memory: 1Gi
            requests:
              cpu: 10m
              memory: 256Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /config
              name: cerbosconfig
              readOnly: true
            - mountPath: /policies
              name: cerbos
            - mountPath: /tmp
              name: tmp
            - mountPath: /.cache
              name: cache
        - args:
            - --config=/config/collector.yml
          image: quay.chester.at/otel/opentelemetry-collector-contrib:0.121.0
          imagePullPolicy: Always
          name: otel
          ports:
            - containerPort: 4317
              protocol: TCP
            - containerPort: 4318
              protocol: TCP
            - containerPort: 50514
              protocol: TCP
            - containerPort: 50514
              protocol: UDP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /config/collector.yml
              name: collector
              readOnly: true
              subPath: collector.yml
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 3
      volumes:
        - configMap:
            defaultMode: 420
            name: cerbosconfig
          name: cerbosconfig
        - emptyDir: {}
          name: cerbos
        - emptyDir: {}
          name: tmp
        - emptyDir: {}
          name: cache
        - configMap:
            defaultMode: 420
            name: collector
            optional: true
          name: collector
