ocp/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: perses
    version: v1
  name: perses
spec:
  host: perses.apps.example.com
  port:
    targetPort: http-8080
  tls:
    termination: edge
  to:
    kind: Service
    name: perses
    weight: 100
  wildcardPolicy: None
